--- a/.github/workflows/kezdi-docs.yaml
+++ b/.github/workflows/kezdi-docs.yaml
@@ -23,3 +23,35 @@ jobs:
           git add docs/Kezdi.jl
           git commit -m "Update Kezdi.jl documentation" || exit 0
           git push
+  docs:
+    name: Documentation
+    runs-on: ubuntu-latest
+    needs: copy-docs
+    permissions:
+      actions: write # needed to allow julia-actions/cache to proactively delete old caches that it has created
+      contents: write
+      statuses: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: julia-actions/setup-julia@v2
+        with:
+          version: '1.11'
+      - uses: julia-actions/cache@v2
+      - name: Configure doc environment
+        shell: julia --project=docs --color=yes {0}
+        run: |
+          using Pkg
+          Pkg.develop(PackageSpec(path=pwd()))
+          Pkg.instantiate()
+      - uses: julia-actions/julia-buildpkg@v1
+      - uses: julia-actions/julia-docdeploy@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
+      - name: Run doctests
+        shell: julia --project=docs --color=yes {0}
+        run: |
+          using Documenter: DocMeta, doctest
+          using Kezdi
+          DocMeta.setdocmeta!(Kezdi, :DocTestSetup, :(using Kezdi); recursive=true)
+          doctest(Kezdi)
