add documentation build to action

--- a/.github/workflows/kezdi-docs.yaml
+++ b/.github/workflows/kezdi-docs.yaml
@@ -2,6 +2,7 @@ name: Copy Kezdi.jl Documentation
 on:
   repository_dispatch:
     types: [copy-kezdi-docs]
+  workdlow_dispatch:
 jobs:
   copy-docs:
     runs-on: ubuntu-latest
@@ -50,7 +51,4 @@ jobs:
       - name: Run doctests
         shell: julia --project=docs/Kezdi.jl --color=yes {0}
         run: |
-          using Documenter: DocMeta, doctest
-          using Kezdi
-          DocMeta.setdocmeta!(Kezdi, :DocTestSetup, :(using Kezdi); recursive=true)
-          doctest(Kezdi)
+          include("docs/Kezdi.jl/make.jl")
