--- a/.github/workflows/kezdi-docs.yaml
+++ b/.github/workflows/kezdi-docs.yaml
@@ -2,7 +2,7 @@ name: Copy Kezdi.jl Documentation
 on:
   repository_dispatch:
     types: [copy-kezdi-docs]
-  workdlow_dispatch:
+  workflow_dispatch:
 jobs:
   copy-docs:
     runs-on: ubuntu-latest
@@ -43,12 +43,7 @@ jobs:
         run: |
           using Pkg
           Pkg.instantiate()
-      - uses: julia-actions/julia-buildpkg@v1
-      - uses: julia-actions/julia-docdeploy@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
-      - name: Run doctests
+      - name: Run build
         shell: julia --project=docs/Kezdi.jl --color=yes {0}
         run: |
           include("docs/Kezdi.jl/make.jl")
