--- a/.github/workflows/kezdi-docs.yaml
+++ b/.github/workflows/kezdi-docs.yaml
@@ -34,14 +34,22 @@ jobs:
       statuses: write
     steps:
       - uses: actions/checkout@v4
-      - uses: julia-actions/setup-julia@v2
+      - name: Setup Julia
+        uses: julia-actions/setup-julia@v2
         with:
           version: '1.11'
-      - uses: julia-actions/cache@v2
-      - name: Configure doc environment
-        shell: julia --project=docs/Kezdi.jl --color=yes {0}
+      - name: Install dependencies
         run: |
-          using Pkg
-          Pkg.instantiate()
-      - name: Run build
-        run: julia --project=docs/Kezdi.jl --color=yes docs/Kezdi.jl/make.jl
+          julia --project=docs/Kezdi.jl -e '
+            using Pkg
+            Pkg.instantiate()'
+      - name: Build documentation
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: julia --project=docs/Kezdi.jl docs/Kezdi.jl/make.jl
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./docs/Kezdi.jl/build
