--- a/.github/workflows/kezdi-docs.yaml
+++ b/.github/workflows/kezdi-docs.yaml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Clone Kezdi.jl documentation
         run: |
-          git clone --depth 1 https://github.com/codedthinking/Kezdi.jl.git temp-docs
+          git clone --depth 1 https://github.com/codedthinking/Kezdi.jl.git/tree/github-pages temp-docs
       - name: Prepare documentation
         run: |
           mkdir -p docs/Kezdi.jl
@@ -38,15 +38,6 @@ jobs:
         uses: julia-actions/setup-julia@v2
         with:
           version: '1.11'
-      - name: Install dependencies
-        run: |
-          julia --project=docs/Kezdi.jl -e '
-            using Pkg
-            Pkg.instantiate()'
-      - name: Build documentation
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: julia --project=docs/Kezdi.jl docs/Kezdi.jl/make.jl
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
         with:
