--- a/.github/workflows/kezdi-docs.yaml
+++ b/.github/workflows/kezdi-docs.yaml
@@ -14,14 +14,14 @@ jobs:
           git clone -b gh-pages --single-branch --depth 1 https://github.com/codedthinking/Kezdi.jl.git/ temp-docs
       - name: Prepare documentation
         run: |
-          mkdir -p docs/Kezdi.jl
-          cp -r temp-docs/dev/* docs/Kezdi.jl/
+          mkdir -p Kezdi.jl
+          cp -r temp-docs/dev/* Kezdi.jl/
           rm -rf temp-docs
       - name: Commit and push changes
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git add docs/Kezdi.jl
+          git add Kezdi.jl
           git commit -m "Update Kezdi.jl documentation" || exit 0
           git push
   docs:
@@ -42,5 +42,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs/Kezdi.jl
+          publish_dir: ./Kezdi.jl
           publish_branch: Kezdi.jl
